--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,11 +2,11 @@
 <center>
   <form method="POST">
      
-      <label>Insert your Salary (1-99): </label>
+      <label>Insert your Salary (1000-9900): </label>
       <input type="number" name="salary" min="1000" max="9900">
       <br />
-      <label>Insert your Gender (1-99): </label>
-      <input type="number" name="gender" min="1" max="99">
+      <label>Insert your Gender (1 for male,0 for feamle): </label>
+      <input type="number" name="gender" min="0" max="1">
       <br />
       <label>Insert your Marital (0 for Single, 1 for Married): </label>
       <input type="number" name="marital" min="0" max="1">
